fix merge problems